# Agentic-Context-Engineering-for-Services

./: .env  .gitignore  LICENSE  README.ko.md  README.md  docker-compose.yml  dockerfile  entrypoint.sh  main.py  pyproject.toml  start.bat
config/: config-example.ini  getenv.py
core/: __init__.py  constant.py  schemas.py  state.py
db/: playbook_metadata.db
evaluation/: hotpot.py  human_eval.py  visualize.py
graph/: __init__.py  full_graph.py  graph_utils.py  inference_graph.py  learning_graph.py  serving_graph.py
module/: LLMs.py  celery_app.py  database.py  db.py  db_management.py  embed.py  graph.py  memory.py  prompt.py  services.py  state.py  task.py
module/node/: ACE.py  generate.py  node_utils.py
node/: __init__.py  node_utils.py  nodes.py
test/: client_test.py  delete_playbook.py  handle_playbook.py  token.py
utils/: __init__.py  highlight.py  python_utils.py  visualize.py
vector_store/playbook_metadata/: meta.json
web/: app.py
