[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker =  "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu128", marker =  "sys_platform == 'win32' or sys_platform == 'linux'" },
]

[tool.setuptools.packages.find]

[project]
name = "agentic-context-engineering-for-services"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.5.3",
    "datasets>=4.4.1",
    "hf-xet>=1.1.10",
    "langchain>=1.0.1",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4",
    "langchain-huggingface>=1.0.0",
    "langchain-openai>=1.0.0",
    "langchain-qdrant>=1.0.0",
    "langcodes>=3.5.0",
    "langgraph>=1.0.1",
    "matplotlib>=3.10.7",
    "pytz>=2025.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.1",
    "sqlalchemy>=2.0.44",
]
